[gd_scene load_steps=6 format=2]

[ext_resource path="res://Assets/enemy.png" type="Texture" id=1]
[ext_resource path="res://Source/Actors/Enemy.gd" type="Script" id=2]
[ext_resource path="res://Assets/Sound effects/wall_hit.wav" type="AudioStream" id=3]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 48, 32 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 59, 12 )

[node name="Enemy" type="KinematicBody2D"]
collision_layer = 2
collision_mask = 9
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 0, -47 )
texture = ExtResource( 1 )

[node name="EnemyCollisionShape" type="CollisionShape2D" parent="."]
position = Vector2( 0, -32 )
shape = SubResource( 1 )

[node name="VisibilityEnabler2D" type="VisibilityEnabler2D" parent="."]
position = Vector2( 0, -8 )
rect = Rect2( -50, -53, 100, 60 )
process_parent = true
physics_process_parent = true

[node name="StompDetector" type="Area2D" parent="."]
modulate = Color( 0.290196, 1, 0, 1 )
position = Vector2( 0, -65 )
collision_layer = 2

[node name="StompCollisionShape" type="CollisionShape2D" parent="StompDetector"]
position = Vector2( -2, -12 )
shape = SubResource( 2 )

[node name="WallSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )
volume_db = -20.0

[connection signal="body_entered" from="StompDetector" to="." method="_on_StompDetector_body_entered"]
